--- a/views/scheduler_data.xml
+++ b/views/scheduler_data.xml
@@ -6,16 +6,12 @@
         <field name="name">Update Status Training Session Berdasarkan Expire Tanggal Selesai</field>
         <field name="model_id" ref="model_training_session"/>
         <field name="state">code</field>
-
-
-
-
-
-
         <field name="code">model.cron_expire_session()</field>
         <field name="user_id" ref="base.user_root"/>
         <field name="interval_number">1</field>
         <field name="interval_type">days</field>
     </record>
+
+    <!-- belajar push -->
  
 </odoo>
